syntax = "proto3";

package v1;
option go_package = "pkg/grpc/v1";

message MovieSearchRequest {
  string Keyword = 1;
  int32 Page = 2;
}

message Movie {
  string Title = 1;
  string Year = 2;
  string ImdbId = 3;
  string Type = 4;
  string Poster = 5;
}

message MovieSearchResponse {
  repeated Movie Movies = 1;
  string TotalResult = 2;
  string Response = 3;
}

message MovieDetailRequest {
  string MovieId = 1;
}

message MovieDetailResponse {
  string Title = 1;
  string Year = 2;
  string Rated = 3;
  string Released = 4;
  string Runtime = 5;
  string Genre = 6;
  string Director = 7;
  string Writer = 8;
  string Actors = 9;
  string Plot = 10;
  string Language = 11;
  string Country = 12;
  string Awards = 13;
  string Poster = 14;
  repeated MovieRating Ratings = 15;
  string Metascore = 16;
  string ImdbRating = 17;
  string ImdbVotes = 18;
  string ImdbID = 19;
  string Type = 20;
  string DVD = 21;
  string BoxOffice = 22;
  string Production = 23;
  string Website = 24;
  string Response = 25;
}

message MovieRating {
  string Source = 1;
  string Value = 2;
}



service MovieService {
  rpc Search (MovieSearchRequest) returns (MovieSearchResponse);
  rpc Detail (MovieDetailRequest) returns (MovieDetailResponse);
}

